--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "CJW"         # "Wios"
 title_separator          : "-"
-name                     : "window_for_sun"
+name                     : "CJW_Homepage"         # "window_for_sun"
 description              : "This is my first site"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
