--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "CJW"         # "Wios"
 title_separator          : "-"
 name                     : "CJW_Homepage"         # "window_for_sun"
 description              : "This is my first site"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : url: "https://choijangwook.github.io/cyj"                        # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : baseurl: "/cyj"                                                  # the subpath of your site, e.g. "/blog"
 repository               : windowforsun/blog # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /favicon.ico # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
