--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "ko-KR"
 title                    : "CJW"         # "Wios"
 title_separator          : "-"
-name                     : "CJW_Homepage"         # "window_for_sun"
+name                     : "window_for_sun"
 description              : "This is my first site"
-url                      : url: "https://choijangwook.github.io/cjw1"                        # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : baseurl: "/cjw1"                                                  # the subpath of your site, e.g. "/blog"
+url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : windowforsun/blog # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : /favicon.ico # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
