--- a/_config.yml
+++ b/_config.yml
@@ -108,9 +108,9 @@ analytics:
 author:
   name             : "CJW"
   avatar           : "/img/cs_make_avatar.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Software Engineer"
-  location         : "Seoul, Korea"
-  email            : "window_for_sun@naver.com"
+  bio              : # "Software Engineer"
+  location         : # "Korea"
+  email            : "jangwookch@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
