--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "CJW"         # "Wios"
+title                    : "CYJ"         # "Wios"
 title_separator          : "-"
-name                     : "window_for_sun"
+name                     : "CYJ"         # "window_for_sun"
 description              : "This is my first site"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -106,7 +106,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "CJW"
+  name             : "CYJ"
   avatar           : "/img/cs_make_avatar.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : # "Software Engineer"
   location         : # "Korea"
